# YSU-RM-CamSDK

./: .gitignore  CMakeLists.txt  README.md  camera.xml  demo.cpp  doc.dot  load_env.sh
Camera/Configs/: MV-SUA133GC-Group0.config  MV-SUA133GC-Group1.config
docs/: install.md  knowledge.md  mindvision_tools.md
example/: CMakeLists.txt  Makefile  Makefile.mindvision  Makefile.usb  test_camera_manager.cpp  test_mindvision_camera.cpp  test_usb_camera.cpp
include/: round_queue.h  status_code.h
include/camera/: camera_manager.h  camera_wrapper.h
include/utils/: log.h  round_queue.h  systime.h
src/: camera_manager.cpp  systime.cpp
src/camera/: CMakeLists.txt  camera_manager.cpp  mindvision_camera.cpp  usb_camera.cpp
src/utils/: CMakeLists.txt  systime.cpp
tools/GTK_Demo/: GTK_demo
tools/GTK_Demo/.deps/: Demo.Po  GTK_demo.Po  callbacks.Po  interface.Po
tools/GTK_Demo/Camera/Configs/: MV-SUA133GC-Group0.config  MV-SUA133GC-Group1.config  MV-SUA133GC-Group2.config  MV-SUA133GC-Group3.config
